<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/list_box">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="6dp"

        android:paddingEnd="6dp"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:autoSizeMaxTextSize="100sp"

        app:autoSizeMinTextSize="16dp"

        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/contactOrganization"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactOrganization"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/bottom_border"
        android:foregroundGravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingStart="18dp"

        android:paddingEnd="6dp"
        android:text="@string/organization"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:visibility="visible"
        app:autoSizeMaxTextSize="70sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/contactData"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactName"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="1" />

    <LinearLayout
        android:id="@+id/contactData"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/contactImage"
        app:layout_constraintTop_toBottomOf="@id/contactOrganization"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contactBothPhones"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_border"
            android:paddingStart="18dp"
            android:paddingEnd="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/contactPhone"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="2dp"
                android:gravity="center_vertical"
                android:onClick="makePhoneCall"

                android:text="@string/phone"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/contactSecond"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/contactSecond"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:onClick="makePhoneCall"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"

                android:text="@string/secondPhone"
                android:textColor="@android:color/black"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/contactPhone"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contactEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_border"
            android:ems="10"
            android:gravity="center_vertical"
            android:onClick="sendEmail"

            android:paddingStart="18dp"
            android:paddingEnd="12dp"
            android:text="@string/email"
            android:textColor="@android:color/black"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contactAddress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="top|start"
            android:onClick="mapAddress"
            android:paddingStart="18dp"

            android:paddingEnd="12dp"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <ImageView
        android:id="@+id/contactImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/no_image"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintLeft_toRightOf="@+id/contactData"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactOrganization"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>